--- a/content/blog/2021-11-02-multivariate-stochastic-volatility-models/index.Rmd
+++ b/content/blog/2021-11-02-multivariate-stochastic-volatility-models/index.Rmd
@@ -22,7 +22,7 @@ As the name suggests dynamic linear models (DLMs) are simply an extension of the
 \begin{align*}
 y_i = x_i \beta + \epsilon_i \quad \quad \epsilon_i \sim N(0, \sigma^2).
 \end{align*}
-In this model the coefficients, `$\beta$`, are assumed to be fixed in time. Now imagine that we have sequential data and we want to update our linear model each we observe a new data point $y_t$ at time $t$. To this end, we can extend the standard fixed linear model by allowing the coefficients and possibly the distribution of the error term, $\epsilon_i$, to vary through time. It is most common but not necessary to assume that the coefficients evolve in time according to discrete a random walk. Here we switch to the common notation for DLMs. Essentially, $x_i$ will become $F_t$, $\beta$ will become $\theta_t$, and $\epsilon_i$ will become $\nu_t$ to account for the possibility of them changing through time. Formally, a DLM can be stated as
+In this model the coefficients, $\beta$, are assumed to be fixed in time. Now imagine that we have sequential data and we want to update our linear model each we observe a new data point $y_t$ at time $t$. To this end, we can extend the standard fixed linear model by allowing the coefficients and possibly the distribution of the error term, $\epsilon_i$, to vary through time. It is most common but not necessary to assume that the coefficients evolve in time according to discrete a random walk. Here we switch to the common notation for DLMs. Essentially, $x_i$ will become $F_t$, $\beta$ will become $\theta_t$, and $\epsilon_i$ will become $\nu_t$ to account for the possibility of them changing through time. Formally, a DLM can be stated as
 
 \begin{alignat*}{2}
 y_t &= F_t \theta_t + \nu_t \quad \quad &\nu_t& \sim N(0, \sigma^2_{y_t}) \\
